--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         guestPhone: form.guestPhone.value,
         needsHighChair: form.needsHighChair.checked
       };
-      const res = await fetch('http://localhost:3000/api/reservar', {
+      const res = await fetch('/api/reservar', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
