implementation of an identification restaurant system

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
       }
 
       const data = {
+        restaurantId: "lcIlxYB2rJg6OoWnoAPpjPGtHHp1",
         guestName: form.guestName.value,
         partySize: form.partySize.value,
         reservationDateTime: form.reservationDateTime.value,
