--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
-          'x-api-key': '&EHF1xPd9%QrRh$#Zb!e7UjS2M%2!Fukd8b@U$9r8n1bG*5D&83V*Z!u7dr1rQTJ'
+          'x-api-key': '1234567890' // Reemplaza con tu clave API real
         },
         body: JSON.stringify(data)
       });
