Rever old commits

--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
       const res = await fetch('/api/reservar', {
         method: 'POST',
         headers: {
-          'Content-Type': 'application/json',
-          'x-api-key': '1234567890' // Reemplaza con tu clave API real
+          'Content-Type': 'application/json'
         },
         body: JSON.stringify(data)
       });
