--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       align-items: center;
       justify-content: center;
       padding: 1rem;
+      position: relative;
     }
     .container {
+      position: relative;
       background: #fff;
       padding: 2.5rem 2rem;
       border-radius: 18px;
@@ -81,10 +83,53 @@
     button:hover {
       background: linear-gradient(90deg, #4fd1c5 0%, #7f9cf5 100%);
     }
+    #resultado {
+      margin-top: 1.5rem;
+      text-align: center;
+      font-size: 1.05rem;
+      font-weight: 500;
+      color: #38a169;
+      min-height: 24px;
+      opacity: 0;
+      transition: opacity 0.5s;
+    }
+    #resultado.visible {
+      opacity: 1;
+    }
+    #resultado.error {
+      color: #dc2626;
+    }
+
+    /* Botón volver atrás dentro del container */
+    .back-btn {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 35px;
+      height: 35px;
+      background: rgba(0, 0, 0, 0.15);
+      color: #2d3748;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
+      font-size: 18px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.3s;
+      text-decoration: none;
+    }
+    .back-btn:hover {
+      background: rgba(0, 0, 0, 0.25);
+    }
   </style>
 </head>
 <body>
+
   <div class="container">
+    <button type="button" class="back-btn" onclick="window.history.back()">←</button>
+
     <h1>Reserva</h1>
     <form id="reservaForm" novalidate>
       <label>Nombre:
@@ -104,29 +149,27 @@
       </label>
       <button type="submit">Reservar</button>
     </form>
+    <div id="resultado"></div>
   </div>
 
   <script>
-    // Bloquear números en campo nombre
     document.querySelector('input[name="guestName"]').addEventListener('keydown', function(e) {
       if (e.key >= '0' && e.key <= '9') {
         e.preventDefault();
       }
     });
 
-    // Bloquear caracteres inválidos en "número de personas"
     document.querySelector('input[name="partySize"]').addEventListener('keydown', function(e) {
-      if (!/^\d$/.test(e.key) && 
-          e.key !== 'Backspace' && 
-          e.key !== 'Delete' && 
-          e.key !== 'ArrowLeft' && 
-          e.key !== 'ArrowRight' && 
+      if (!/^\d$/.test(e.key) &&
+          e.key !== 'Backspace' &&
+          e.key !== 'Delete' &&
+          e.key !== 'ArrowLeft' &&
+          e.key !== 'ArrowRight' &&
           e.key !== 'Tab') {
         e.preventDefault();
       }
     });
 
-    // Bloquear martes al elegir fecha
     document.querySelector('input[name="reservationDateTime"]').addEventListener('change', function(e) {
       const dateStr = e.target.value;
       if (!dateStr) return;
@@ -143,30 +186,22 @@
     document.getElementById('reservaForm').onsubmit = async function(e) {
       e.preventDefault();
       const form = e.target;
-
-      // Quitar errores previos
+      const resultadoDiv = document.getElementById('resultado');
       const inputs = form.querySelectorAll('input');
       inputs.forEach(input => input.classList.remove('error'));
 
-      // Validar nombre
       const nombre = form.guestName.value.trim();
-      if (
-        nombre.length < 2 ||
-        nombre.length > 40 ||
-        !/^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+$/.test(nombre)
-      ) {
+      if (nombre.length < 2 || nombre.length > 40 || !/^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]+$/.test(nombre)) {
         mostrarError('guestName', '❌ El nombre debe tener entre 2 y 40 letras y solo contener letras y espacios.');
         return;
       }
 
-      // Validar número de personas
       const partySize = form.partySize.value.trim();
       if (partySize === '' || isNaN(partySize) || partySize < 1 || partySize > 30) {
         mostrarError('partySize', '❌ El número de personas debe ser un número entre 1 y 30.');
         return;
       }
 
-      // Validar fecha
       const fecha = form.reservationDateTime.value;
       if (!fecha) {
         mostrarError('reservationDateTime', '❌ Debes ingresar una fecha y hora.');
@@ -185,7 +220,6 @@
         }
       }
 
-      // Validar teléfono
       const telefono = form.guestPhone.value.trim();
       if (!/^\d{7,15}$/.test(telefono)) {
         mostrarError('guestPhone', '❌ El teléfono debe tener entre 7 y 15 dígitos, solo números.');
@@ -212,19 +246,31 @@
       const result = await res.json();
 
       if (result.success) {
-        alert('✅ Reserva creada correctamente.');
+        resultadoDiv.className = 'visible';
+        resultadoDiv.innerText = '✅ Reserva creada';
         form.reset();
+
+        setTimeout(() => {
+          resultadoDiv.className = '';
+          resultadoDiv.innerText = '';
+        }, 3000);
       } else {
-        alert('❌ Error: ' + result.error);
+        resultadoDiv.className = 'error visible';
+        resultadoDiv.innerText = '❌ Error: ' + result.error;
+
+        setTimeout(() => {
+          resultadoDiv.className = '';
+          resultadoDiv.innerText = '';
+        }, 3000);
+      }
+
+      function mostrarError(inputName, message) {
+        const input = form.querySelector(`[name="${inputName}"]`);
+        input.classList.add('error');
+        alert(message);
+        input.classList.remove('error');
       }
     };
-
-    function mostrarError(inputName, message) {
-      const input = document.querySelector(`[name="${inputName}"]`);
-      input.classList.add('error');
-      alert(message);
-      input.classList.remove('error');
-    }
   </script>
 </body>
 </html>
